--- a/testfiles/02-after.html
+++ b/testfiles/02-after.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>
-      This is a title.
-    </title>
+    <title>This is a title.</title>
   </head>
   <body>
     <p>
@@ -11,8 +9,8 @@
       <br>
       Line2
     </p>
+    <p>A Single Line</p>
     <br/>
   </body>
 </html>
 <!-- aaa -->
-<a>
